--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 unbind C-b
 
 # set prefix key to ctrl-a
-set -g prefix C-a
+# set -g prefix C-a
 
 # lower command delay
 set -sg escape-time 1
@@ -15,7 +15,7 @@ set -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
 # pass through a ctrl-a if you press it twice
-bind C-a send-prefix
+# bind C-a send-prefix
 
 # better mnemonics for splitting panes!
 bind | split-window -h
@@ -38,10 +38,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # disable mouse support (at least while we're learning)
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+# setw -g mode-mouse off
+# set -g mouse-select-pane off
+# set -g mouse-resize-pane off
+# set -g mouse-select-window off
 
 # turn on 256 color support in tmux
 set -g default-terminal "screen-256color"
@@ -72,7 +72,6 @@ set -g message-bg colour22
 set -g message-attr bright
 
 # configure contents of status bar
-set -g status-utf8 on
 set -g status-left-length 40
 set -g status-left "#[fg=green]\"#S\""
 
