--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # unbind some default keybindings
-unbind C-b
+# unbind C-b
 
 # set prefix key to ctrl-a
 # set -g prefix C-a
@@ -85,11 +85,11 @@ set -g visual-activity on
 setw -g mode-keys vi
 
 # copy/paste using vim-style keys
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+# bind Escape copy-mode
+# unbind p
+# bind p paste-buffer
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
 
 # xclip support (commented as this often doesn't make sense on remote servers)
 #bind C-c run "tmux save-buffer - / xclip -i -sel clipboard"
