--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,3 +104,8 @@ bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
 # set up alias for turning on logging
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
