--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,15 @@ set -g pane-base-index 1
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
-# pass through a ctrl-a if you press it twice
-# bind C-a send-prefix
+# pass through a ctrl-b if you press it twice
+# bind C-b send-prefix
+
+bind-key : command-prompt
+bind-key r refresh-client
+bind-key L clear-history
+bind-key space next-window
+bind-key bspace previous-window
+bind-key enter next-layout
 
 # better mnemonics for splitting panes!
 bind | split-window -h
@@ -77,12 +84,16 @@ set -g status-left "#[fg=green]\"#S\""
 
 set -g status-right "#[fg=green] #h | %d %b %R"
 
-set -g status-justify centre
+#set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
 # navigate using vim-style keys
 setw -g mode-keys vi
+
+# Fix to allow mousewheel/trackpad scrolling in tmux 2.1
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 # copy/paste using vim-style keys
 # bind Escape copy-mode
